FC fix z-index bug, fix positioning of wikipedia logo  and percentage positioning on <FoodInfo>, add help to <FoodLegend> percentages

--- a/src/foodComparison/foodCompare/FoodCompare.scss
+++ b/src/foodComparison/foodCompare/FoodCompare.scss
@@ -68,6 +68,7 @@ body {
   &__nav {
     grid-area: nav;
     position: sticky;
+    z-index: 1;
     top: 0;
   }
 
@@ -75,7 +76,6 @@ body {
     grid-area: main;
     display: flex;
     flex-direction: column;
-    z-index: -1;
   }
 
   &__footer {
