--- a/src/foodComparison/foodInfo/FoodInfo.scss
+++ b/src/foodComparison/foodInfo/FoodInfo.scss
@@ -34,8 +34,6 @@ $darkModeInnerCircle: black;
   }
 
   &__water__percentage {
-    top: 31.7%;
-    left: 61.5%;
     font-size: 0.7rem;
   }
 
@@ -45,9 +43,9 @@ $darkModeInnerCircle: black;
   }
 
   &__wikipedia {
-    left: 63%;
-    width: 10%;
-    top: 51%;
+    left: 64.5%;
+    width: 7.5%;
+    top: 53.5%;
   }
 
   #inner_circle {
