--- a/src/foodComparison/foodLegend/FoodLegend.scss
+++ b/src/foodComparison/foodLegend/FoodLegend.scss
@@ -22,6 +22,7 @@
       }
     }
     &__value {
+      cursor: help;
       font-size: 1rem;
       &:first-child {
         padding-right: 0.3rem;
